fixed text wrapping and selfie resizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,13 @@ body {
     font-size: 40px;
     color: yellow
 }
+/* applies to my selfie */
+.header img {
+  max-height: 200px;
+  float: left;
+}
 
-/* .header h1 .goodies {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #e6c90e; 
-} */
+
 
 /* This affects the navigation bar- "About Me, Portfolio, Contact, Resume */
 nav {
@@ -33,7 +33,7 @@ nav {
     /* float: right; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
-
+    white-space: nowrap;
 } 
 
 
@@ -84,20 +84,16 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #b82cc5;
     color: #ffffff;
+      border-style: solid;
+    border-width: 2px;
+   padding: 2%;
+    float: left;
+    width: 100%;
 }
 .content-section img {
     max-height: 200px;
 }
 
-/* This displays the three parts of portfolio as cards and responsive to media queries
-*/
-.content-section {
-  border-style: solid;
-  border-width: 2px;
-  padding: 2%;
-  float: left;
-  width: 100%;
-}
 
 .content-section header {
   padding: 20px;
@@ -111,25 +107,8 @@ p {
   width: 300px;
   height: 400px;
 }
-
-
-/* Cards are split into two columns at 992px or smaller (about equal to a tablet in landscape) */
- /* @media screen and (max-width: 992px) {
-    .content-section {
-      width: 50%;
-    }
-  } */
-  
-  /* Cards are stacked on top of each other at 768px or smaller (about equal to tablets in portrait or phones in landscape)*/
-  /* @media screen and (max-width: 768px) {
-    .content-section {
-      width: 100%;
-    } */
- 
-  
-
-
-
+/* makes the  word portfolio bigger */
+#portfolio h2 {font-size:500%;}
 
   #contact-me {
    /* trying display flex and justify content to add space between li items */
@@ -154,5 +133,22 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+/* Cards are split into two columns at 992px or smaller (about equal to a tablet in landscape) */
 
+ /* @media screen and (max-width: 992px) {
+    .content-section {
+      width: 50%;
+    }
+  } */
+  
+  /* Cards are stacked on top of each other at 768px or smaller (about equal to tablets in portrait or phones in landscape)*/
+  @media screen and (max-width: 768px) {
+    .content-section img {
+      display: none;}
+    .header h1 {
+      display: none;}
+    .header img {
+    max-height: 150px;}
+ 
 
+  }
